修改了直接调用 newInstance() 的问题